 * Fix: Ensure userbar dialog can sit above other website content (LB (Ben) Johnston)
 * Fix: Fix preview panel loading issues (Sage Abdullah)
 * Fix: Fix `search_promotions` `0004_copy_queries` migration for long-lived Wagtail instances (Sage Abdullah)
 * Fix: Guard against `TypeError` in `0088_fix_log_entry_json_timestamps` migration (Sage Abdullah)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Docs: Update color customisations guidance to include theme-agnostic options (Thibaud Colas)
 * Docs: Mark LTS releases in release note page titles (Thiago C. S. Tioma)
 * Docs: Revise main Getting started tutorial for clarity (Kevin Chung (kev-odin))
 * Docs: Revamp the start of the getting started section, with separate quick install page (Damilola Oladele)
 * Docs: Move the tutorial’s snippets section to come before tags (Damilola Oladele)
 * Docs: Rewrite the getting started tutorial to address identified friction points (Damilola Oladele)
 * Docs: Switch the Getting started tutorial’s snippets example to be more understandable (Damilola Oladele)
 * Docs: Update the deployment documentation page and remove outdated information (Jake Howard)
 * Docs: Add more items to performance page regarding pre-fetching images and frontend caching (Jake Howard)
 * Docs: Add docs for managing stored queries in `searchpromotions` (Scott Foster)
 * Docs: Add docs for migrating from ModelAdmin to Snippets (Sage Abdullah)
 * Maintenance: Removed support for Python 3.7 (Dan Braghis)