@@ -124,6 +124,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Fix preview panel loading issues (Sage Abdullah)
  * Fix `search_promotions` `0004_copy_queries` migration for long-lived Wagtail instances (Sage Abdullah)
  * Guard against `TypeError` in `0088_fix_log_entry_json_timestamps` migration (Sage Abdullah)
+ * Add migration to replace JSON null values with empty objects in log entries' data (Sage Abdullah)
 
 ### Documentation
 
